--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -25,6 +25,13 @@ RUN service php7.3-fpm start
 # RUN service php7.3-fpm status
 # Bu dizinin oluşması için: '/run/php/php7.3-fpm.sock'
 
+# COPY komutunu if-else içinde kullanamadığımdan dolayı yedek dosya olarak oluşturup daha sonrasında if else içinde kullanıyoruz.
+# Bu yapıyı kullanmaya gerek yok
+COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www_backup.conf
+
+# Kendimiz tarafından oluşturulan www.conf dosyasını test etmek için,
+# RUN rm -rf /etc/php/7.3/fpm/pool.d/www.conf
+
 RUN if [ -f /etc/php/7.3/fpm/pool.d/www.conf ]; then \
 		sed -i 's/^user = deploy$/user = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
 		sed -i 's/^group = deploy$/group = www-data/' /etc/php/7.3/fpm/pool.d/www.conf && \
@@ -34,7 +41,7 @@ RUN if [ -f /etc/php/7.3/fpm/pool.d/www.conf ]; then \
 		sed -i 's/^;listen.mode = 0660$/listen.mode = 0660/' /etc/php/7.3/fpm/pool.d/www.conf && \
 		echo "Configuration updated." ; \
 	else \
-		COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf && \
+		cp /etc/php/7.3/fpm/pool.d/www_backup.conf /etc/php/7.3/fpm/pool.d/www.conf && \
 		echo "Configuration copied." ; \
 	fi
 
