--- a/srcs/requirements/bonus/adminer/conf/www.conf
+++ b/srcs/requirements/bonus/adminer/conf/www.conf
@@ -59,7 +59,7 @@ listen = 9000;127.0.0.1:9000
 ;                 is not set, the owner's group is used. Mode is set to 0660.
 listen.owner = www-data;@php_fpm_user@
 listen.group = www-data;@php_fpm_group@
-;listen.mode = 0660
+listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
